--- a/views/stores.pug
+++ b/views/stores.pug
@@ -5,6 +5,6 @@ include mixins/_storeCard
 block content
     .inner
         h2= title
-        //pre= h.dump(stores)
-        each store in stores
-            +storeCard(store)
+        .stores
+            each store in stores
+                +storeCard(store)
