--- a/views/store.pug
+++ b/views/store.pug
@@ -1,7 +1,7 @@
 extends layout
 
 include mixins/_reviewForm
-
+include mixins/_review
 block content
     .single
         .single__hero
@@ -20,3 +20,8 @@ block content
                             span.tag__text  ##{tag}
         if user
             +reviewForm(store)
+        if store.reviews
+            .reviews
+                each review in store.reviews
+                    .review
+                        +review(review)
